--- a/client/src/Popup.css
+++ b/client/src/Popup.css
@@ -87,6 +87,7 @@
   
     .mm-popup__box {
         width: 350px;
+        height: 200px;
         position: fixed;
         top: 10%;
         left: 50%;
